--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -3940,4 +3940,11 @@
 	<string name="poi_rescue_box">Rescue box</string>
 	<string name="poi_climbing_crag">Yes</string>
 
+	<string name="poi_hazard_additional_erosion">Hazard: erosion</string>
+	<string name="poi_hazard_additional_rockfall">Hazard: rockfall</string>
+	<string name="poi_hazard_additional_nuclear">Hazard: nuclear</string>
+	<string name="poi_hazard_additional_flood">Hazard: flood</string>
+	<string name="poi_hazard_additional_avalanche">Hazard: avalanche</string>
+	<string name="poi_hazard_additional_minefield">Hazard: minefield</string>
+	<string name="poi_hazard_additional_contamination">Hazard: contamination</string>
 </resources>
