ui tweaks and fixes (icon resources, dividers, etc

--- a/OsmAnd/res/layout/bottom_sheet_item_with_descr_and_radio_btn.xml
+++ b/OsmAnd/res/layout/bottom_sheet_item_with_descr_and_radio_btn.xml
@@ -71,6 +71,7 @@
   </LinearLayout>
 
   <View
+    android:id="@+id/divider_bottom"
     android:layout_width="match_parent"
     android:layout_height="1dp"
     android:layout_marginStart="64dp"
