--- a/OsmAnd/res/drawable-v21/dlg_btn_stroked_light.xml
+++ b/OsmAnd/res/drawable-v21/dlg_btn_stroked_light.xml
@@ -2,21 +2,22 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 	<item android:state_pressed="true">
 		<shape android:shape="rectangle">
-			<corners android:radius="4dp" />
 			<stroke android:width="1dp" android:color="@color/active_buttons_and_links_light" />
+			<corners android:radius="@dimen/dlg_button_rect_rad" />
 		</shape>
 	</item>
 	<item android:state_enabled="false">
 		<shape android:shape="rectangle">
-			<solid android:color="@color/activity_background_light" />
-			<corners android:radius="4dp" />
+			<solid android:color="@color/inactive_buttons_and_links_light" />
+			<corners android:radius="@dimen/dlg_button_rect_rad" />
 		</shape>
 	</item>
 	<item>
 		<shape android:shape="rectangle">
-			<solid android:color="@null" />
-			<corners android:radius="4dp" />
 			<stroke android:width="1dp" android:color="@color/profile_button_gray" />
+			<solid android:color="@color/stroked_buttons_and_links_light" />
+			<corners android:radius="@dimen/dlg_button_rect_rad" />
 		</shape>
 	</item>
+
 </selector>
