--- a/OsmAnd/res/layout/fragment_selected_profile.xml
+++ b/OsmAnd/res/layout/fragment_selected_profile.xml
@@ -140,13 +140,9 @@
 							android:layout_width="0dp"
 							android:layout_height="60dp"
 							android:layout_weight="1"
-							android:layout_marginTop="@dimen/list_content_padding"
-							android:layout_marginBottom="@dimen/list_content_padding"
-							android:layout_marginStart="@dimen/list_content_padding"
-							android:layout_marginEnd="@dimen/list_content_padding"
-							android:layout_marginLeft="@dimen/list_content_padding"
-							android:layout_marginRight="@dimen/list_content_padding"
-							app:labelText="Profile Name">
+							android:layout_margin="@dimen/list_content_padding"
+							app:primaryColor="@color/color_dialog_buttons_dark"
+							app:labelText="@string/profile_name_hint">
 
 							<studio.carbonylgroup.textfieldboxes.ExtendedEditText
 								android:id="@+id/profile_name_et"
@@ -219,15 +215,13 @@
 						android:id="@+id/navigation_type_otfb"
 						android:layout_width="match_parent"
 						android:layout_height="60dp"
-
+						app:primaryColor="@color/color_dialog_buttons_dark"
 						app:labelText="Navigation Type">
 
 						<studio.carbonylgroup.textfieldboxes.ExtendedEditText
 							android:id="@+id/navigation_type_et"
 							android:layout_width="match_parent"
 							android:layout_height="wrap_content"
-							android:drawableEnd="@drawable/ic_action_arrow_drop_down"
-							android:drawableRight="@drawable/ic_action_arrow_drop_down"
 							android:focusable="false"
 							android:maxLines="1"
 
@@ -476,7 +470,7 @@
 					android:layout_marginEnd="8dp"
 					android:layout_marginLeft="@dimen/list_content_padding"
 					android:layout_marginRight="8dp"
-					android:background="@drawable/btn_round_profile_gray"
+					android:background="?attr/profile_cancel_btn"
 					android:text="@string/shared_string_cancel"
 					android:textAllCaps="false"
 					android:textColor="@color/map_widget_blue"/>
@@ -492,7 +486,7 @@
 					android:layout_marginEnd="@dimen/list_content_padding"
 					android:layout_marginLeft="8dp"
 					android:layout_marginRight="@dimen/list_content_padding"
-					android:background="@drawable/btn_round_profile_blue"
+					android:background="?attr/profile_save_btn"
 					android:text="@string/shared_string_save"
 					android:textAllCaps="false"
 					android:textColor="@color/color_white"/>
@@ -522,10 +516,10 @@
 			android:layout_marginEnd="8dp"
 			android:layout_marginLeft="@dimen/list_content_padding"
 			android:layout_marginRight="8dp"
-			android:background="@drawable/btn_round_profile_gray"
+			android:background="?attr/profile_cancel_btn"
 			android:text="@string/shared_string_cancel"
 			android:textAllCaps="false"
-			android:textColor="@color/map_widget_blue"/>
+			android:textColor="?attr/active_color_basic"/>
 
 		<Button
 			android:id="@+id/save_profile_btn"
@@ -538,7 +532,7 @@
 			android:layout_marginEnd="@dimen/list_content_padding"
 			android:layout_marginLeft="8dp"
 			android:layout_marginRight="@dimen/list_content_padding"
-			android:background="@drawable/btn_round_profile_blue"
+			android:background="?attr/profile_save_btn"
 			android:text="@string/shared_string_save"
 			android:textAllCaps="false"
 			android:textColor="@color/color_white"/>
