--- a/OsmAnd-turn_screen_on/src/main/res/layout/activity_main.xml
+++ b/OsmAnd-turn_screen_on/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/llPluginPreferencesLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/activityBackground"
@@ -17,102 +18,8 @@
         app:title="@string/app_name"
         app:titleTextColor="@color/white" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="52dp"
-                android:background="@color/white">
-
-                <TextView
-                    android:id="@+id/tvPluginStateDescription"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/disabled"
-                    android:layout_gravity="center_vertical|start"
-                    android:layout_marginLeft="12dp"
-                    android:textColor="#727272"
-                    android:textSize="24sp" />
-
-                <android.support.v7.widget.SwitchCompat
-                    android:id="@+id/swFunctionSwitcher"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical|end"
-                    android:theme="@style/SwitchStyle"
-                    android:layout_marginRight="12dp"/>
-            </FrameLayout>
-
-            <View
-                android:layout_height="20dp"
-                android:layout_width="match_parent"/>
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:id="@+id/tvPluginTimeWorkDescription"
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:text="@string/timeWorkingDescription"/>
-
-                    <Spinner
-                        android:id="@+id/spTime"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-
-                </LinearLayout>
-            </FrameLayout>
-
-            <Button
-                android:id="@+id/btnRegister"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="register"/>
-
-        </LinearLayout>
-
         <FrameLayout
-            android:id="@+id/btnOpenOsmand"
-            android:layout_width="200dp"
-            android:layout_height="74dp"
-            android:layout_gravity="center_horizontal|bottom"
-            android:layout_marginBottom="32dp"
-            android:background="@drawable/blue_button">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|start"
-                android:layout_marginLeft="16dp"
-                android:text="+"
-                android:textColor="@color/white"
-                android:textSize="48sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|end"
-                android:layout_marginRight="24dp"
-                android:text="@string/openOsmand"
-                android:textColor="@color/white"
-                android:textSize="18sp" />
-
-        </FrameLayout>
-
-    </FrameLayout>
-
-
+            android:id="@+id/flRootLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 </LinearLayout>
