--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -3947,4 +3947,7 @@
 	<string name="poi_hazard_additional_avalanche">Hazard: avalanche</string>
 	<string name="poi_hazard_additional_minefield">Hazard: minefield</string>
 	<string name="poi_hazard_additional_contamination">Hazard: contamination</string>
+
+	<string name="poi_defibrillator_location">Location</string>
+
 </resources>
