--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -3961,4 +3961,6 @@
 	<string name="poi_changing_table_fee_yes">Changing table fee: yes</string>
 	<string name="poi_changing_table_fee_no">Changing table fee: no</string>
 
+	<string name="poi_charcoal_pile">Charcoal pile</string>
+
 </resources>
