--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -3963,4 +3963,6 @@
 
 	<string name="poi_charcoal_pile">Charcoal pile</string>
 
+	<string name="poi_historic_tank">Historic tank</string>
+
 </resources>
