--- a/OsmAnd/res/values-ru/phrases.xml
+++ b/OsmAnd/res/values-ru/phrases.xml
@@ -3472,4 +3472,6 @@
 
 	<string name="poi_charcoal_pile">Куча для выжига угля</string>
 
+	<string name="poi_historic_tank">Танк</string>
+
 </resources>
