--- a/OsmAnd/res/layout/privacy_settings_layout.xml
+++ b/OsmAnd/res/layout/privacy_settings_layout.xml
@@ -48,7 +48,7 @@
 			<net.osmand.plus.widgets.TextViewEx
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:text="@string/colleted_data"
+				android:text="@string/collected_data"
 				android:textColor="?android:textColorPrimary"
 				android:textSize="@dimen/default_list_text_size"
 				osmand:typeface="@string/font_roboto_medium" />
