--- a/OsmAnd-Plugin-TurnScreenOn/src/main/res/layout/activity_plugin_description.xml
+++ b/OsmAnd-Plugin-TurnScreenOn/src/main/res/layout/activity_plugin_description.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -52,23 +51,11 @@
                 android:text="@string/pluginDescription"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
+
         </LinearLayout>
+
     </LinearLayout>
 
-    <FrameLayout
-        android:id="@+id/btnContinue"
-        android:layout_width="92dp"
-        android:layout_height="36dp"
-        android:layout_gravity="center_horizontal|bottom"
-        android:layout_marginBottom="24dp"
-        android:background="@color/violet">
+    <include layout="@layout/btn_continue"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/continueDesc"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
-    </FrameLayout>
 </FrameLayout>
