--- a/OsmAnd-Plugin-TurnScreenOn/src/main/res/layout/btn_open_osmand.xml
+++ b/OsmAnd-Plugin-TurnScreenOn/src/main/res/layout/btn_open_osmand.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom|center">
 
     <FrameLayout
         android:id="@+id/btnOpenOsmand"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center"
-        android:layout_marginBottom="16dp"
         android:background="@drawable/blue_button">
 
         <LinearLayout
@@ -32,6 +31,9 @@
                 android:text="@string/openOsmand"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
+
         </LinearLayout>
+
     </FrameLayout>
+
 </FrameLayout>
