--- a/OsmAnd-Plugin-TurnScreenOn/src/main/res/drawable/blue_button.xml
+++ b/OsmAnd-Plugin-TurnScreenOn/src/main/res/drawable/blue_button.xml
@@ -1,27 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="false">
-        <shape>
-            <corners android:radius="70dip" />
-            <solid
-                android:color="@color/blue" />
-        </shape>
-    </item> <!-- pressed -->
-    <item android:state_pressed="true" >
-        <shape>
-            <corners android:radius="70dip" />
-            <solid
-                android:color="@color/darkerBlue" />
-        </shape>
-    </item>
-    <!--<item android:bottom="2dp" android:left="2dp">
-        <shape>
-            <gradient android:angle="270"
-                android:endColor="#E2E2E2" android:startColor="#BABABA" />
-            <stroke android:width="1dp" android:color="#BABABA" />
-            <corners android:radius="4dp" />
-            <padding android:bottom="10dp" android:left="10dp"
-                android:right="10dp" android:top="10dp" />
-        </shape>
-    </item>-->
+    <item android:drawable="@drawable/img_fab_tap" android:state_pressed="true"/>
+    <item android:drawable="@drawable/img_fab_normal"/>
 </selector>
