--- a/OsmAnd-Plugin-TurnScreenOn/src/main/res/layout/item_time.xml
+++ b/OsmAnd-Plugin-TurnScreenOn/src/main/res/layout/item_time.xml
@@ -5,7 +5,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/basic_element_height">
+        android:layout_height="@dimen/basic_element_height"
+        android:layout_marginRight="@dimen/horizontal_padding">
         <TextView
             android:id="@+id/tvTime"
             android:layout_width="0dp"
@@ -23,5 +24,7 @@
             android:layout_gravity="center_vertical"
             style="@style/RadioButtonStyle"/>
     </LinearLayout>
+
+    <View style="@style/turnScreenOnListDividerStyle" />
 
 </FrameLayout>
