--- a/OsmAnd-Plugin-TurnScreenOn/src/main/res/layout/main_el_osmand_versions.xml
+++ b/OsmAnd-Plugin-TurnScreenOn/src/main/res/layout/main_el_osmand_versions.xml
@@ -1,32 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
-    <FrameLayout
-        android:id="@+id/flRootLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/horizontal_padding"
-        android:paddingRight="@dimen/horizontal_padding">
-        <LinearLayout
+        <FrameLayout
+            android:id="@+id/flRootLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="46dp"
-                android:text="@string/OsmandVersion"
-                android:gravity="center_vertical"
-                style="@style/turnScreenOnHeaderTextStyle"/>
+            android:layout_height="wrap_content">
 
             <LinearLayout
-                android:id="@+id/llOsmandVersions"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" />
-        </LinearLayout>
-    </FrameLayout>
-</android.support.v7.widget.CardView>
+                android:background="@color/white"
+                android:orientation="vertical">
+
+                <TextView
+                    style="@style/turnScreenOnHeaderTextStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="46dp"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="@dimen/horizontal_padding"
+                    android:paddingRight="@dimen/horizontal_padding"
+                    android:text="@string/OsmandVersion" />
+
+                <View style="@style/turnScreenOnListDividerStyle" />
+
+                <LinearLayout
+                    android:id="@+id/llOsmandVersions"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" />
+
+            </LinearLayout>
+
+        </FrameLayout>
+
+</FrameLayout>
