--- a/OsmAnd-Plugin-TurnScreenOn/src/main/res/layout/main_el_sensor.xml
+++ b/OsmAnd-Plugin-TurnScreenOn/src/main/res/layout/main_el_sensor.xml
@@ -1,56 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="@dimen/horizontal_padding"
-        android:paddingRight="@dimen/horizontal_padding">
-
-        <FrameLayout
-            android:id="@+id/flPanelSensor"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/basic_element_height"
-                android:background="@color/white">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:src="@drawable/ic_action_sensor_interaction"
-                    android:tint="@color/darkGrey" />
-
-                <TextView
-                    style="@style/turnScreenOnHeaderTextStyle"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:text="@string/sensorHeader" />
-
-                <android.support.v7.widget.SwitchCompat
-                    android:id="@+id/swSensorEnableSwitcher"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical|end"
-                    android:background="@android:color/transparent"
-                    android:theme="@style/SwitchStyle" />
-            </LinearLayout>
-        </FrameLayout>
-
-
-        <TextView
-            style="@style/turnScreenOnDescriptionTextStyle"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/sensorDescription" />
-    </LinearLayout>
-</android.support.v7.widget.CardView>
+            android:orientation="vertical">
+
+            <FrameLayout
+                android:id="@+id/flPanelSensor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/horizontal_padding"
+                android:paddingRight="@dimen/horizontal_padding">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/basic_element_height">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/ic_action_sensor_interaction"
+                        android:tint="@color/darkGrey" />
+
+                    <TextView
+                        style="@style/turnScreenOnHeaderTextStyle"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:text="@string/sensorHeader" />
+
+                    <android.support.v7.widget.SwitchCompat
+                        android:id="@+id/swSensorEnableSwitcher"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical|end"
+                        android:background="@android:color/transparent"
+                        android:theme="@style/SwitchStyle" />
+
+                </LinearLayout>
+
+            </FrameLayout>
+
+            <View style="@style/turnScreenOnListDividerStyle" />
+
+            <TextView
+                style="@style/turnScreenOnDescriptionTextStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/horizontal_padding"
+                android:paddingRight="@dimen/horizontal_padding"
+                android:text="@string/sensorDescription" />
+        </LinearLayout>
+
+</FrameLayout>
