--- a/OsmAnd-Plugin-TurnScreenOn/src/main/res/layout/main_el_time_set_up.xml
+++ b/OsmAnd-Plugin-TurnScreenOn/src/main/res/layout/main_el_time_set_up.xml
@@ -1,62 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:paddingLeft="@dimen/horizontal_padding"
-        android:paddingRight="@dimen/horizontal_padding">
-
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:background="@color/white">
 
-            <FrameLayout
-                android:id="@+id/flPanelTime"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/basic_element_height"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:src="@drawable/ic_action_time_span"
-                        android:tint="@color/darkGrey" />
-
-                    <TextView
-                        android:id="@+id/tvPluginTimeWorkDescription"
-                        style="@style/turnScreenOnHeaderTextStyle"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_weight="1"
-                        android:text="@string/timeWorkingHeader" />
-
-                    <TextView
-                        android:id="@+id/tvTime"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:textColor="@color/blue"
-                        android:textSize="16sp" />
-
-                </LinearLayout>
-            </FrameLayout>
-
-            <TextView
-                style="@style/turnScreenOnDescriptionTextStyle"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/timeWorkingDescription" />
-        </LinearLayout>
-    </FrameLayout>
-</android.support.v7.widget.CardView>
+                android:orientation="vertical">
+
+                <FrameLayout
+                    android:id="@+id/flPanelTime"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="@dimen/horizontal_padding"
+                    android:paddingRight="@dimen/horizontal_padding">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/basic_element_height"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:src="@drawable/ic_action_time_span"
+                            android:tint="@color/darkGrey" />
+
+                        <TextView
+                            android:id="@+id/tvPluginTimeWorkDescription"
+                            style="@style/turnScreenOnHeaderTextStyle"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_weight="1"
+                            android:text="@string/timeWorkingHeader" />
+
+                        <TextView
+                            android:id="@+id/tvTime"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:textColor="@color/blue"
+                            android:textSize="16sp" />
+
+                    </LinearLayout>
+                </FrameLayout>
+
+                <View style="@style/turnScreenOnListDividerStyle" />
+
+                <TextView
+                    style="@style/turnScreenOnDescriptionTextStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="@dimen/horizontal_padding"
+                    android:paddingRight="@dimen/horizontal_padding"
+                    android:text="@string/timeWorkingDescription" />
+            </LinearLayout>
+
+        </FrameLayout>
+
+</FrameLayout>
