--- a/OsmAnd-Plugin-TurnScreenOn/src/main/res/xml/device_admin.xml
+++ b/OsmAnd-Plugin-TurnScreenOn/src/main/res/xml/device_admin.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <device-admin xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-policies>
-        <limit-password />
+       <!-- <limit-password />
         <watch-login />
-        <reset-password />
+        <reset-password />-->
         <force-lock />
-        <wipe-data />
+        <!--<wipe-data />
         <expire-password />
         <encrypted-storage />
         <disable-camera />
-        <disable-keyguard-features />
+        <disable-keyguard-features />-->
     </uses-policies>
 </device-admin>
