--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -3965,4 +3965,6 @@
 
 	<string name="poi_historic_tank">Historic tank</string>
 
+	<string name="poi_hookah_lounge">Hookah lounge</string>
+
 </resources>
