fix UI fix VoiceRouter tabulation

--- a/plugins/OsmAnd-TurnScreenOn/src/main/res/layout/activity_plugin_description.xml
+++ b/plugins/OsmAnd-TurnScreenOn/src/main/res/layout/activity_plugin_description.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PluginDescriptionActivity">
+    tools:context=".PluginDescriptionActivity"
+    android:background="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
