--- a/plugins/OsmAnd-TurnScreenOn/src/main/res/values/styles.xml
+++ b/plugins/OsmAnd-TurnScreenOn/src/main/res/values/styles.xml
@@ -22,7 +22,7 @@
     <style name="RadioButtonStyle" parent="Theme.AppCompat.Light">
         <!--<item name="colorControlNormal">@color/darkGrey</item>-->
         <item name="colorControlActivated">@color/blue</item>
-        <item name="android:background">@color/white</item>
+        <item name="android:background">@android:color/transparent</item>
     </style>
 
     <style name="turnScreenOnHeaderTextStyle">
