--- a/plugins/OsmAnd-TurnScreenOn/src/main/res/layout/main_el_time_set_up.xml
+++ b/plugins/OsmAnd-TurnScreenOn/src/main/res/layout/main_el_time_set_up.xml
@@ -27,6 +27,7 @@
                         android:orientation="horizontal">
 
                         <ImageView
+                            android:id="@+id/ivTimeSetUpIcon"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
